# GAMES101_Assignments

./: README.md
Assignment00/pa0/: CMakeLists.txt  main.cpp
Assignment01/Code/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment02/Code/: Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment03/Code/: Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment03/Rasterizer_Pipline/: .$Rasterizer_Pipline.drawio.bkp  Rasterizer_Pipline.drawio  Rasterizer_Pipline.drawio.html
Assignment04/code/: CMakeLists.txt  main.cpp
Assignment05/Code/: Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment06/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
